# rag_evals

./: .gitignore  README.md  comprehensive_evaluation.py  comprehensive_evaluation_results.json  pyproject.toml  pytest.ini  rag_results.json  requirements.txt  research_paper (1).aux  research_paper (1).fdb_latexmk  research_paper (1).fls  research_paper (1).out  research_paper (1).tex  sample_document.txt  test_everything.py  test_results.json
.depricated/: clip_image_processing.py  clip_processed_document.txt  evaluation.py  factual_consistency.py  ingestion_strategies.py  llm_evaluation.py  main.py  pdf_utils.py  rag_evaluation.py  requirements.txt  results.json  retriever.py  run_experiment.sh
cli/: main.py  run_experiment.sh
compat_shims/: clip_image_processing.py  factual_consistency.py  ingestion_strategies.py  llm_evaluation.py  pdf_utils.py  rag_evaluation.py  rag_grader.py  retriever.py
data/: ground_truth_queries.json
pdf_ingestion/: __init__.py
pdf_ingestion/evaluation/: __init__.py  answer_eval.py  comparative_analysis.py  factual_eval.py  rag_eval.py  rag_grade.py  retrieval_metrics.py  statistical_tests.py
pdf_ingestion/ingest/: __init__.py  figure_adapter.py  strategies.py
pdf_ingestion/retrieval/: __init__.py  retriever.py
pdf_ingestion/utils/: __init__.py  image_utils.py  pdf_utils.py
test_documents/: computer_vision_paper.txt  neural_networks_paper.txt  nlp_transformers_paper.txt  reinforcement_learning_paper.txt
tests/: conftest.py  test_evaluation.py  test_image_utils.py  test_ingestion.py  test_pdf_utils.py  test_retrieval.py
(+3 files in other folders)
