[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_ingestion"
version = "0.1.0"
description = "A package for processing and ingesting PDF documents"
authors = [
    {name = "Calvin Laughlin", email = "calvin@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/username/pdf_ingestion"
"Bug Tracker" = "https://github.com/username/pdf_ingestion/issues"

[tool.setuptools]
packages = ["pdf_ingestion"]

